# po_translator

./: README.md
po_translator/: Cargo.toml  Makefile  de.po  file.po
po_translator/.cargo/: config.toml
po_translator/languages/: domain-translate-af.po  domain-translate-am.po  domain-translate-ar.po  domain-translate-az.po  domain-translate-az_TR.po  domain-translate-bg_BG.po  domain-translate-bn_BD.po  domain-translate-bn_IN.po  domain-translate-bs_BA.po  domain-translate-ca.po  domain-translate-co.po  domain-translate-cy.po  domain-translate-da_DK.po  domain-translate-de_DE.po  domain-translate-en_AU.po  domain-translate-en_CA.po  domain-translate-en_GB.po  domain-translate-en_SA.po  domain-translate-en_US.po  domain-translate-eo.po  domain-translate-es_AR.po  domain-translate-es_CR.po  domain-translate-es_DO.po  domain-translate-es_EC.po  domain-translate-es_ES.po  domain-translate-es_GT.po  domain-translate-es_HN.po  domain-translate-es_PE.po  domain-translate-es_PR.po  domain-translate-es_UY.po  domain-translate-es_VE.po  domain-translate-et.po  domain-translate-eu.po  domain-translate-fa_AF.po  domain-translate-fa_IR.po  domain-translate-fi.po  domain-translate-fr_BE.po  domain-translate-fr_FR.po  domain-translate-fy.po  domain-translate-ga.po  (+53 more)
po_translator/src/: main.rs
